# presence-monitor

./: .gitignore  CLAUDE_PROPOSALS.md  CODE_REVIEW.md  CONVENTIONS.md  Cargo.toml  LICENSE  MISSION.md  PROGRESS.md  README.md  START_HERE.md  config.json  install-task.ps1  presence_monitor.ps1  start-monitor.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: arp.rs  clock.rs  config.rs  main.rs  mic.rs  monitor.rs  ping.rs  presence.rs  state.rs  tts.rs
