[package]
name = "presence-monitor"
version = "2.3.0"
edition = "2021"
description = "Ping-based presence monitor (OnePlus 9 Pro) with microphone verification, TTS greeting, and panic mode."
license = "MIT"
repository = "https://github.com/st0rax/presence-monitor"

[[bin]]
name = "presence-monitor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "std", "macros"] }
anyhow = "1"

[profile.release]
opt-level = 2
